--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -20,7 +20,36 @@
 html {
   scroll-behavior: smooth;
 }
+.markdown-container blockquote {
+  background-color: var(--code-bg) !important;
+  border: none !important;
+  border-radius: 20px;
+  padding: 5px 25px;
+  box-shadow:
+    8px 8px 16px rgba(0, 0, 0, 0.2),
+    -8px -8px 16px rgba(255, 255, 255, 0.02);
+  position: relative;
+}
 
+.markdown-container blockquote::after {
+  content: "";
+  position: absolute;
+  left: 10px;
+  top: 20%;
+  height: 60%;
+  width: 4px;
+  background: linear-gradient(to bottom, #ff0080, #7928ca);
+  border-radius: 10px;
+}
+li {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+
+li p {
+  margin: 0;
+}
 body {
   background-color: var(--bg-color);
   color: var(--text-main);
@@ -261,6 +290,10 @@ div {
 }
 
 .toc-title {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
+  display: block;
   font-weight: 800;
   font-size: 0.75rem;
   letter-spacing: 0.15em;
@@ -271,7 +304,7 @@ div {
 .toc-scroll-area {
   flex: 1;
   overflow-y: auto;
-  padding: 1rem;
+  padding: 0 1rem;
   scroll-behavior: smooth;
 }
 
@@ -284,13 +317,13 @@ div {
 .toc-link {
   cursor: pointer;
   display: block;
-  padding: 0.6rem 0.8rem;
+  padding: 0.5rem 0.5rem;
   font-size: 0.85rem;
   color: var(--text-main);
   border-radius: 8px;
   transition: all 0.2s ease;
   user-select: none;
-  margin-bottom: 2px;
+  /* margin-bottom: 2px; */
   line-height: 1.4;
 }
 
@@ -325,31 +358,6 @@ div {
   to {
     opacity: 1;
   }
-}
-
-.status-bar,
-.print-btn {
-  position: fixed;
-  background: rgba(13, 17, 23, 0.9);
-  backdrop-filter: blur(10px);
-  color: #fff;
-  padding: 8px 16px;
-  font-size: 11px;
-  font-family: var(--font-mono);
-  border-radius: 100px;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-  z-index: 1000;
-}
-
-.status-bar {
-  bottom: 0.5rem;
-  right: 0.5rem;
-}
-.print-btn {
-  bottom: 2.5rem;
-  right: 0.5rem;
-  cursor: pointer;
 }
 
 ::selection {
@@ -388,7 +396,6 @@ div {
   .toc-sidebar,
   .toc-toggle,
   .toc-overlay,
-  .status-bar,
   .print-btn {
     display: none !important;
   }
@@ -430,4 +437,26 @@ div {
   text-transform: uppercase;
   color: var(--accent);
   border-bottom: 1px solid var(--border-color);
+}
+
+#markdown-content {
+  font-size: var(--base-font-size);
+}
+
+#markdown-content p,
+#markdown-content li,
+#markdown-content code {
+  font-size: 1em;
+}
+:root {
+  --user-font-size: 16px;
+}
+
+html {
+  font-size: var(--user-font-size);
+}
+
+#content p {
+  font-size: 1rem;
+  line-height: 1.6;
 }
