--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -4,7 +4,7 @@
 
 html {
     scroll-behavior: smooth;
-    font-size: 16px;
+    font-size: var(--font-size);
     background-color: var(--bg-color);
     color: var(--text-main);
 }
@@ -50,7 +50,7 @@ body {
 .markdown-container {
     flex: 1;
     width: 100%;
-    max-width: 750px;
+    max-width: var(--max-width-view);
     margin: 0 auto;
     padding: 5rem 2rem 4rem 2rem;
     font-family: var(--font-sans);
